[package]
name = "probe-zmq"
version = "0.3.7"
authors = ["Christoph Koehler <christoph@zerodeviation.net>"]
description = "Probe is a TUI ZMQ PUB/SUB monitor and debugger."
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ckoehler/probe"
readme = "README.md"
publish = true

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
argh="0.1"
regex = "1"
itertools = "0.14"
rand = "0.9"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-error = "0.2.1"
color-eyre = "0.6.5"
zeromq = "0.4.1"
tokio-stream = "0.1.17"
console-subscriber = { version = "0.4.1", optional = true }
thiserror = "2.0.14"

[[bin]]
name = "probe"
path = "src/main.rs"

[features]
console = ["dep:console-subscriber"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = true
codegen-units = 1


[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
unwrap_used = "deny"

[lints]
workspace = true

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }
rand = "0.9"

[[bench]]
name = "probe_benchmarks"
harness = false
